(SERVER-33) Increase default max permgen